--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     padding-right: 30px;
     padding-left: 30px;
 ">
-    <img class="image" src="Source/Payroll System Email Marketing.png" alt="">
+    <img class="image" src="Mornedeklerk.github.io/Payroll System Email Marketing.png" alt="">
     </div>
 </div>
     
