--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payroll System</title>
 </head>
-<body style="background-color: #f3f3f3; display: flex; justify-content: center; align-items: center; align-self: center; flex-direction: column; margin: 0;">
+<body style="background-color: #f3f3f3; ">
 <div style="display: flex;justify-content: center; flex-wrap: wrap;" >
     <div class="content-box" style="background: #eaeaea; max-width: 500px; margin-top: 30px;  margin-bottom: 30px; padding: 20px; display: flex; flex-direction: column; align-items: center; ">
 
@@ -17,7 +17,7 @@
         </div>
 
         <h2 style="background-color: #cfcfcf; text-align: center; padding: 5px; margin-top: 20px; width: 100%;">Why Choose Us?</h2>
-        <p style="padding: 20px; background-color: #7bc84c; border-radius: 5px; font-size: 16px; text-align: justify;">
+        <p style="padding: 20px; background-color: #7bc84c; border-radius: 5px; font-size: 16px; ">
             <strong>Efficiency:</strong> Our payroll system simplifies complex tasks, automates calculations, and ensures compliance.
             <br><br>
             <strong>Accuracy:</strong> Say goodbye to manual errors. Our system ensures precise payroll calculations.
@@ -27,7 +27,7 @@
             <strong>Compliance:</strong> Stay up-to-date with tax regulations effortlessly.
 
             <h2 style="background-color: #cfcfcf; text-align: center; padding: 5px; margin-top: 20px;width: 100%">What Sets Us Apart?</h2>
-            <p style="padding: 20px; background-color: #7bc84c; border-radius: 5px; margin-bottom: 20px; font-size: 16px; text-align: justify;">
+            <p style="padding: 20px; background-color: #7bc84c; border-radius: 5px; margin-bottom: 20px; font-size: 16px; ">
                 <strong>User-Friendly Interface:</strong> Our intuitive interface makes payroll processing straightforward, even for those without a background in payroll management.
                 <br><br>
                 <strong>Support:</strong> Our dedicated support team is available to assist you with any queries or concerns.
@@ -40,9 +40,9 @@
                 <div class="container">
                     <div class="inner-section">
                         <h2 style="text-align: center; background-color: #cfcfcf; text-align: center; padding: 10px;">Links</h2>
-                        <div  style="display: flex; justify-content: space-evenly;align-items: center;align-self: center; background-color: #d2cfcf; padding: 30px; border-radius: 5px; ">
-                            <a style="border: 2px solid #7bc44c;  color: #7bc44c; background-color: white; padding: 10px 30px 10px 30px; text-decoration: none; font-weight: bold;" href="https://planaheadgroup.com/store/product/payroll-software">Payroll Software</a>
-                            <a style="border: 2px solid #666666;  color: #666666; background-color: white; padding: 10px 30px 10px 30px; text-decoration: none; font-weight: bold;" href="https://planaheadgroup.com/store/product/payroll-software">Demo</a>
+                        <div  style="display: flex; justify-content: space-evenly;align-items: center;align-self: center; background-color: #d2cfcf; padding: 30px; border-radius: 5px;flex-wrap: wrap;">
+                            <a style="border: 2px solid #7bc44c;  color: #7bc44c; background-color: white; padding: 10px 30px 10px 30px; text-decoration: none; font-weight: bold; text-align: center;" href="https://planaheadgroup.com/store/product/payroll-software">Payroll Software</a>
+                            <a style="border: 2px solid #666666;  color: #666666; background-color: white; padding: 10px 30px 10px 30px; text-decoration: none; font-weight: bold; text-align: center;" href="https://planaheadgroup.com/store/product/payroll-software">Demo</a>
                         </div>
                         
                     </div>
