--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
 
         <div class="img" style="text-align: center; width: auto; background: #dfdfdf; margin: 30px; padding: 30px; align-items: center; display:flex;">
-            <img class="image" src="https://planaheadgroup.com/templates/Payroll System Email Marketing.png" alt="" style="max-width: 100%; height: auto;">
+            <img class="image" src="Payroll System Email Marketing.png" alt="" style="max-width: 100%; height: auto;">
         </div>
     </div>
         <style>
